# GameTopHelperKMM

./: .gitignore  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
.github/workflows/: build-android.yml  build-ios.yml  tests.yml
androidApp/: build.gradle.kts  lint.xml
androidApp/src/main/: AndroidManifest.xml
androidApp/src/main/java/com/example/gametophelper/: ChooseHelperActivity.kt  MainActivity.kt  ScheduleFullScreen.kt  SplashActivity.kt
androidApp/src/main/java/com/example/gametophelper/auth/: LoginActivity.kt  RegisterActivity.kt
androidApp/src/main/java/com/example/gametophelper/widget/: ScheduleWidgetProvider.kt  WidgetUpdateWorker.kt
androidApp/src/main/res/drawable/: ic_next_day.xml  ic_prev_day.xml
androidApp/src/main/res/layout/: widget_schedule.xml
androidApp/src/main/res/values/: themes.xml
androidApp/src/main/res/xml/: widget_info.xml
app/: build.gradle.kts
app/src/androidTest/java/com/example/gametophelperkmm/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/gametophelperkmm/: ExampleUnitTest.kt
backup/: GameBridge.kt  IOSSessionManager.kt
iosApp/: build.gradle.kts
shared/: build.gradle.kts
shared/src/androidMain/cpp/: CMakeLists.txt  GameBridge.cpp  Helper.cpp  Helper.h  Player.cpp  Player.h  Shop.cpp  Shop.h  Skin.cpp  Skin.h
shared/src/androidMain/kotlin/com/example/gametophelper/shared/: GameBridge.kt
(+15 files in other folders)
